1.3.0 unreleased
================

 * Added application/x-shockwave-flash to the inline mimetypes, so they can
   be shown in a page without causing a download prompt. This closes
   https://dev.plone.org/plone/ticket/5778.
   [hannosch]

 * Removed a shortcut in the relative path criterion, which wouldn't work in
   all cases. This closes https://dev.plone.org/plone/ticket/7785.
   [hannosch]

 * The photo album view never showed the number of images in subfolders.
   This closes https://dev.plone.org/plone/ticket/7759.
   [hannosch]

 * Adjust accessor for location field to ensure the catalog metadata is always
   populated correctly. This refs https://dev.plone.org/plone/ticket/6424.
   [hannosch]

 * Removed txng_get method from file content type. The hook is deprecated and
   TextIndexNG 3 doesn't use it anymore. This closes
   https://dev.plone.org/plone/ticket/4297.
   [hannosch]

 * Fixed problem in parsing GPS information in exif metadata. This closes
   https://dev.plone.org/plone/ticket/7057.
   [hannosch]

 * Increased the maxlength for the url field of links from 255 to 511. This
   closes https://dev.plone.org/plone/ticket/6422.
   [hannosch]

 * Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
   Consider branching before this revision if release required before Plone 4.
   [elro]

 * Remove leading whitespace in hrefs.
   [wichert]

 * Remove __bobo_traverse__ from ATNewsItem and ATImage. Instead rely on the
   generic ImageTraverse publish traverser from Archetypes.
   [wichert]

 * Corrected i18n markup in schemata.py for the nextprevious field.
   This closes http://dev.plone.org/plone/ticket/7517.
   [hannosch]

 * The edit tab in ZMI should not be displayed for ATImage/ATFIle objects.
   http://dev.plone.org/archetypes/ticket/763
   [deo]

 * Added tests for utils.dt2DT and utils.DT2dt that expose a bug as found
   in Vice regarding converted dates becoming naive of timezones. Fixed.
   [matthewwilkes]
