@@ -1,6 +1,10 @@
 1.3.0 unreleased
 ================
 
+ * Removed confusing behavior of ATEvent mixing eventType and Subject.
+   This closes https://dev.plone.org/plone/ticket/5058.
+   [hannosch]
+
  * Added application/x-shockwave-flash to the inline mimetypes, so they can
    be shown in a page without causing a download prompt. This closes
    https://dev.plone.org/plone/ticket/5778.
